# Spam-filter

./: README.md  main.py  pyproject.toml  requirements.txt  test.py  toDo.txt
